--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
     <title>taka's portfolio</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+        <input type="text" name="name" />
+        <input type="email" name="email" />
+      　<textarea name="message"></textarea>
+      </form>
+    </div>
   </body>
 </html>
