--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,6 @@
     <title>taka's portfolio</title>
   </head>
   <body>
-    <div id="app">
-      <form name="ask-question" netlify netlify-honeypot="bot-field" hidden>
-
-        <input type="text" name="name" />
-        <input type="radio" name="panelist" />
-        <textarea name="question"></textarea>
-      </form>
-    </div>
+    <div id="app"></div>
   </body>
 </html>
