--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@engineer_takas" /> 
+    <meta property="og:url" content="https://takahiro-portfolio.netlify.app/" />
+    <meta property="og:title" content="taka-portfolio" />
+    <meta property="og:description" content="独学での学習への取り組みや作品を掲載しています。" />
+    <meta property="og:image" content="./src/assets/image/taka-portfolio.jpeg"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>taka's portfolio</title>
   </head>
