--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://takahiro-portfolio.netlify.app/" />
     <meta property="og:title" content="taka-portfolio" />
     <meta property="og:description" content="独学での学習への取り組みや作品を掲載しています。" />
-    <meta name="twitter:image" content="taka-portfolio.jpeg">
+    <meta property="og:image" content="taka-portfolio.jpeg">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>taka's portfolio</title>
   </head>
